src/base/objects/BT_Product__c/BT_Product__c.object-meta.xml
<CustomObject>
    <label>BT Product</label>
    <nameField>
        <label>BT Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>