src/base/objects/BT_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the account this opportunity&apos;s node is associated with.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BT Products</relationshipLabel>
    <relationshipName>Opportunity_Nodes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>