src/base/objects/BT_Product__c/fields/ARR_Cash__c.field-meta.xml
<CustomField>
    <fullName>ARR_Cash__c</fullName>
    <description>Calculates Cash ARR based on either base price or custom price (if set).</description>
    <formula>IF( OR(ISBLANK(Node_Price__c), Node_Price__c = 0.00) , (Quantity__c * Node__r.Base_Node_Price__c * 12), (Quantity__c * Node_Price__c * 12))</formula>
    <inlineHelpText>This will automatically populate based on the node&apos;s base price or your custom price (if set).</inlineHelpText>
    <label>ARR Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>