src/base/objects/BT_Product__c/fields/Avg_Total_Staked__c.field-meta.xml
<CustomField>
    <fullName>Avg_Total_Staked__c</fullName>
    <label>Avg Total Staked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>