src/base/objects/BT_Product__c/fields/Avg_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Avg_Transaction_Fee__c</fullName>
    <label>Avg Transaction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>