src/base/objects/BT_Product__c/fields/Avg_Transaction_Volume__c.field-meta.xml
<CustomField>
    <fullName>Avg_Transaction_Volume__c</fullName>
    <label>Avg Transaction Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>