src/base/objects/BT_Product__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill</label>
    <referenceTo>Bill__c</referenceTo>
    <relationshipLabel>BT Products</relationshipLabel>
    <relationshipName>BT_Products</relationshipName>
    <type>Lookup</type>
</CustomField>