src/base/objects/BT_Product__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>BT Products</relationshipLabel>
    <relationshipName>BT_Products</relationshipName>
    <type>Lookup</type>
</CustomField>