src/base/objects/BT_Product__c/fields/Churned__c.field-meta.xml
<CustomField>
    <fullName>Churned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this product has churned.</description>
    <label>Churned</label>
    <type>Checkbox</type>
</CustomField>