src/base/objects/BT_Product__c/fields/Has_Standard_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_Standard_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Standard Product</label>
    <type>Checkbox</type>
</CustomField>