src/base/objects/BT_Product__c/fields/Is_Delegating__c.field-meta.xml
<CustomField>
    <fullName>Is_Delegating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A measure of whether this customer is delegating.</description>
    <inlineHelpText>Check this box if this customer is delegating.</inlineHelpText>
    <label>Is Delegating</label>
    <type>Checkbox</type>
</CustomField>