src/base/objects/BT_Product__c/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The node associated with this opportunity</description>
    <label>Node</label>
    <referenceTo>Node__c</referenceTo>
    <relationshipName>Opportunity_Nodes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>