src/base/objects/BT_Product__c/fields/Node_Price__c.field-meta.xml
<CustomField>
    <fullName>Node_Price__c</fullName>
    <description>LEAVE BLANK UNTIL YOU HAVE THE AGREED UPON VALUE. Price/node/month. This will auto-populate to give an estimate based off our pricing sheet.</description>
    <inlineHelpText>LEAVE BLANK UNTIL YOU HAVE THE AGREED UPON VALUE. Price/node/month. This will auto-populate to give an estimate based off our pricing sheet.</inlineHelpText>
    <label>Node Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>