src/base/objects/BT_Product__c/fields/Participatory_Fee__c.field-meta.xml
<CustomField>
    <fullName>Participatory_Fee__c</fullName>
    <description>LEAVE BLANK UNTIL YOU HAVE THE AGREED UPON VALUE. This value refers to either Participatory Fees OR Revenue Share to Coinbase for Coinbase Pay opportunities. This will auto-populate to give an estimate based off our pricing sheet.</description>
    <inlineHelpText>LEAVE BLANK UNTIL YOU HAVE THE AGREED UPON VALUE. This value refers to either Participatory Fees OR Revenue Share to Coinbase for Coinbase Pay opportunities. This will auto-populate to give an estimate based off our pricing sheet.</inlineHelpText>
    <label>Participatory Fee/Rev Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>