src/base/objects/BT_Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Query &amp; Transact</fullName>
            </value>
            <value>
                <fullName>Delegate</fullName>
            </value>
            <value>
                <fullName>Participate</fullName>
            </value>
            <value>
                <fullName>Coinbase Pay SDK</fullName>
            </value>
            <value>
                <fullName>Wallet-as-a-Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>