src/base/objects/BT_Product__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the sub total that is matched with sub total formula so it can be used in the opportunity rollup.</description>
    <inlineHelpText>This is will automatically populate based on the number of tokens staked and/or quantity of nodes.</inlineHelpText>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>