src/base/objects/BT_Product__c/fields/Tokens_Staked__c.field-meta.xml
<CustomField>
    <fullName>Tokens_Staked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of tokens staked for this protocol</description>
    <inlineHelpText>This value refers to either Tokens Staked OR Annual Transacting Users for Coinbase Pay opportunities.</inlineHelpText>
    <label>Tokens Staked/Annual Users</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>