src/base/objects/BT_Product__c/fields/Transaction_Fee_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee_Rewards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the node&apos;s digital asset ARR is calculated based on network transaction fees.</description>
    <inlineHelpText>Check if this node&apos;s digital asset ARR is calculated based on network transaction fees.</inlineHelpText>
    <label>Transaction Fee Rewards</label>
    <type>Checkbox</type>
</CustomField>