src/base/objects/BT_Product__c/fields/Unique_Active_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Unique_Active_Wallet__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>WaaS Calculation Only</inlineHelpText>
    <label>Unique Active Wallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>