src/base/objects/BT_Product__c/validationRules/Populate_Tokens_Staked_Annual_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Tokens_Staked_Annual_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Product_Type__c,&apos;Wallet-as-a-Service&apos;)),
Tokens_Staked__c &lt;= 0





)</errorConditionFormula>
    <errorDisplayField>Tokens_Staked__c</errorDisplayField>
    <errorMessage>Due to the Product Type you entered in, the Tokens Staked/Annual Users field must be populated</errorMessage>
</ValidationRule>