src/base/objects/BT_Product__c/validationRules/Populate_Unique_Active_Wallet_for_WaaS.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Unique_Active_Wallet_for_WaaS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Product_Type__c,&apos;Wallet-as-a-Service&apos;),
Unique_Active_Wallet__c &lt;= 0





)</errorConditionFormula>
    <errorDisplayField>Unique_Active_Wallet__c</errorDisplayField>
    <errorMessage>Unique Active Wallet field must be populated if Product Type is WaaS</errorMessage>
</ValidationRule>